--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -1,4 +1,11 @@
 .cont-card { display: flex; }
+.cont-pad { 
+    display: flex;
+    align-items: stretch;
+    padding: 1px;
+    background-color: var(--border-white);
+    clip-path: polygon(5% 0%, 95% 0%, 100% 10%, 100% 90%, 95% 100%, 5% 100%, 0% 90%, 0% 10%);
+}
 
 .card {
     padding: 20px;
@@ -7,17 +14,16 @@
     flex-direction: column;
     gap: 15px;
     background: linear-gradient(160deg, var(--border-white) 0%, var(--bg-white) 30%, var(--bg-white) 100%);
-    border-radius: 20px;
-    outline: 1px solid var(--border-white);
+    clip-path: polygon(5% 0%, 95% 0%, 100% 10%, 100% 90%, 95% 100%, 5% 100%, 0% 90%, 0% 10%);
 
     & .title {
-        font-size: 18px;
+        font-size: 17px;
         color: var(--font-black);
         display: flex;
         align-items: center;
         gap: 12px;
         text-transform: uppercase;
-        font-family: "Chakra Petch", serif;
+        font-weight: 500;
 
         & .raimbow {
             display: grid;
@@ -38,106 +44,49 @@
 
     & p { 
         color: var(--font-sm-black);
-        -webkit-mask-image: linear-gradient(To bottom, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%);
-        mask-image: linear-gradient(To bottom, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%);
     }
 }
 
-.audio-cont {
+.skills-cont {
     display: flex;
     align-items: center;
     gap: 15px;
     margin-bottom: 80px;
+    -webkit-mask-image: linear-gradient(90deg, var(--bg-white) 80%, transparent 100%);
+    mask-image: linear-gradient(90deg, var(--bg-white) 80%, transparent 100%);
 }
 
-.cardAudio {
+.cardSoftSkill {
     width: 100%;
     background-color: var(--bg-mm-white);
     border-radius: 20px;
     overflow: hidden;
     display: flex;
     position: relative;
-    align-items: center;
+    align-items: flex-start;
     gap: 10px;
-    padding-right: 15px;
+    padding: 10px;
     border: 1px solid var(--border-white);
     background: linear-gradient(160deg, var(--bg-white) 30%, var(--bg-white) 70%, var(--border-white) 100%);
 
-    & img { 
-        width: 120px;
-        -webkit-mask-image: linear-gradient(To right, var(--bg-white), transparent);
-        mask-image: linear-gradient(To right, var(--bg-white), transparent);
-    }
+    & img { width: 120px; outline: 1px solid var(--border-white); border-radius: calc(var(--radius-card) + 8px); }
 
     & .row {
         display: grid;
-        gap: 5px;
+        gap: 8px;
 
         & h4 {
             color: var(--font-black);
-            font-weight: 500;
-            font-size: 17px;
-            font-family: "Chakra Petch", serif;
+            font-weight: 600;
+            font-size: 15px;
+            text-transform: uppercase;
+            background-color: var(--bg-mm-white);
+            padding: 8px 15px;
+            border-radius: var(--radius-card);
+            outline: 1px solid var(--border-white);
         }
         
-        & h6 { color: var(--font-sm-black); font-size: 13px; font-weight: 600; }
-
-        input[type="range"] {
-            -webkit-appearance: none;
-            appearance: none;
-            width: 100%;
-            height: 5px;
-            background: var(--border-sm-white);
-            border-radius: 4px;
-            outline: none;
-            cursor: pointer;
-            margin-top: 10px;
-        } 
-
-        input[type="range"]::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            height: 13px;
-            width: 13px;
-            border-radius: 50%;
-            background-color: var(--bg-purple-dark);
-            border: 2px solid var(--bg-purple);
-            backdrop-filter: blur(10px);
-        }
-          
-        input[type="range"]::-moz-range-thumb {
-            -webkit-appearance: none;
-            height: 13px;
-            width: 13px;
-            border-radius: 50%;
-            background-color: var(--bg-purple-dark);
-            border: 2px solid var(--bg-purple);
-            backdrop-filter: blur(10px);
-        }
-          
-        input[type="range"]::-ms-thumb {
-            -webkit-appearance: none;
-            height: 13px;
-            width: 13px;
-            border-radius: 50%;
-            background-color: var(--bg-purple-dark);
-            border: 2px solid var(--bg-purple);
-            backdrop-filter: blur(10px);
-        }
-    }
-
-    & .play {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        display: grid;
-        place-items: center;
-        background-color: var(--border-white);
-        border-radius: 13px;
-        padding: 6px;
-        background:var(--border-white);
-        border: 1px solid var(--border-sm-white);
-
-        & svg { width: 20px; color: var(--font-black); stroke-width: 2px; }
+        & h6 { color: var(--font-sm-black); font-size: 14px; line-height: 18px; font-weight: 600; }
     }
 }
 
@@ -146,35 +95,26 @@
 .projects, .extras {
     & .cardProject {
         width: 100%;
-        background-color: var(--bg-white);
         position: relative;
-        border-radius: var(--radius-card);
         overflow: hidden; 
         border-radius: 20px;
+        background-color: var(--bg-white);
         outline: 1px solid var(--border-white);
-    
-        & picture {
-            padding: 0;
-            margin: 0;
-            background-color: var(--bg-white);
-        }
         
         & img { max-width: 100%; }
 
         & .cont-text {
-            padding: 20px;
             display: grid;
             gap: 15px; 
-            background: linear-gradient(160deg, var(--border-white) 0%, var(--bg-white) 30%, var(--bg-white) 100%);
 
             & .title {
                 display: flex;
                 align-items: center;
                 gap: 12px;
                 color: var(--font-black);
-                font-size: 18px;
+                font-size: 17px;
                 text-transform: uppercase;
-                font-family: "Chakra Petch", serif;
+                font-weight: 500;
 
                 & .raimbow {
                     display: grid;
@@ -215,12 +155,12 @@
             & .link {
                 padding: 5px 10px;
                 font-size: 12px;
-                border-radius: 6px;
+                border-radius: var(--radius-card);
                 text-decoration: none;
                 color: var(--font-black);
                 background-color: var(--border-white);
                 outline: 1px solid var(--border-sm-white);
-                font-weight: 600;
+                font-weight: 400;
             }
         }
 
@@ -233,7 +173,7 @@
                 width: 30px;
                 -webkit-mask-image: linear-gradient(To bottom, var(--bg-white), transparent);
                 mask-image: linear-gradient(To bottom, var(--bg-white), transparent);
-                border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+                border-radius: 30% 70% 70% 30% / 30% 30% 40% 70%;
                 border: 2px solid var(--border-sm-white);
                 filter: saturate(0) brightness(0.5);
             }   
@@ -244,17 +184,19 @@
 .projects {
     .cardProject {
         padding: 20px;
-        background: linear-gradient(160deg, var(--border-white) 0%, var(--bg-white) 15%, var(--bg-white) 90%, var(--border-white) 100%);
+        background: linear-gradient(160deg, var(--border-white) 0%, var(--bg-white) 15%, var(--bg-white) 90%);
 
         & img {
             border: 2px solid var(--bg-mm-white);
             border-radius: 20px;
             filter: saturate(0) brightness(0.5);
+            -webkit-mask-image: linear-gradient(To bottom, var(--bg-white) 70%, transparent 100%);
+            mask-image: linear-gradient(To bottom, var(--bg-white) 70%, transparent 100%);
         }
 
         & .cont-text {
             background: transparent;
-            padding: 15px 0;
+            padding: 15px 0 0 0;
         }
 
         .cont-links { top: 20px; }
@@ -292,5 +234,16 @@
         transform: translateX(-2px) translateY(-5px);
     } 100% {
         transform: translateX(0%) translateY(0%);
+    }
+}
+
+@media (max-width: 1800px) {
+    .skills-cont {
+        overflow: hidden;
+        border-radius: 20px;
+    }
+
+    .cardSoftSkill {
+        min-width: 450px;
     }
 }
