--- a/src/css/home.css
+++ b/src/css/home.css
@@ -217,50 +217,22 @@ header {
     padding-bottom: 15px;
     gap: 10px;
     display: grid;
-    place-items: center;
     position: relative;
-    
-    &::before {
-        position: absolute;
-        content: '';
-        width: 100%;
-        max-width: 600px;
-        height: 1px;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        background: linear-gradient(90deg, transparent, var(--font-black), transparent);
-    }
-
-    &::after {
-        position: absolute;
-        content: '';
-        width: 30px;
-        height: 5px;
-        bottom: -2px;
-        left: 50%;
-        transform: translateX(-50%);
-        background-color: var(--font-black);
-        box-shadow: 0 0 15px var(--font-black);
-        border-radius: 6px;
-    }
 
     & .title {
-        font-size: clamp(20px, 5vw, 25px);
+        font-size: clamp(30px, 5vw, 40px);
         color: var(--font-black);
-        font-weight: 600;
-        text-align: center;
-        text-transform: uppercase;
-        font-family: "Chakra Petch", serif;
+        text-align: left;
+        font-weight: 900;
     }
 
     & .subTitle {
-        font-size: 16px;
-        text-align: center;
+        font-size: clamp(25px, 5vw, 30px);
+        text-align: left;
         color: var(--font-sm-black);
-        max-width: 70ch;
-        line-height: 22px;
-        font-weight: 500;
+        max-width: 50ch;
+        line-height: 1.3;
+        font-weight: 900;
     }
 }
 
