--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,32 +1,30 @@
 nav {
-    position: absolute;
-    top: 12px;
-    left: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: calc(100%);
-    padding: 0 12px;
     border-radius: var(--radius-card);
+    position: fixed;
+    top: 0;
+    padding: 10px 15px;
+    z-index: 1000;
+    backdrop-filter: blur(100px);
 
-    .row {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-
-        h1 {
-            font-size: 25px;
-            font-weight: 700;
-            color: var(--font-black);
-        }
-
-        & svg { width: 35px; color: var(--font-black); }
+    &::before {
+        position: absolute;
+        content: '';
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 500%;
+        height: 1px;
+        border-bottom: 1px dashed var(--border-mm-white);
     }
-
+    
     ul {
         display: flex;
         gap: 8px;
-
+        
         a, button {
             display: flex;
             align-items: center;
@@ -38,173 +36,74 @@ nav {
             border-radius: var(--radius-card);
             font-weight: 500;
             background-color: var(--border-white);
-            font-family: "Chakra Petch", serif;
-
+            
             & svg { color: var(--font-black); width: 19px; }
+        }
+    }
+    
+    .navigate-link {
+        display: flex;
+        align-items: center;
+
+        h1 {
+            text-align: center;
+            font-size: 22px;
+            color: var(--font-black);
+            font-weight: 900;
+            text-transform: uppercase;
+        }
+        
+        a, button {
+            display: flex;
+            color: var(--font-black);
+            padding: 0 5px;
+            background-color: transparent;
         }
     }
 }
 
 header {
     width: 100%;
+    max-width: 1400px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    margin-bottom: 15px;
-    overflow: hidden;
+    margin-bottom: 50px;
     position: relative;
     border-radius: 20px;
     min-height: 600px;
-    border: 1px solid var(--border-white);
 
-    .brand {
-        & img {
-            width: 110px;
-            border-radius: 20px;
-            border: 2px solid var(--border-sm-white);
-
-            &:nth-child(1) { 
-                width: 230px;
-                position: absolute; 
-                left: -30px;
-                transform: rotate(-10deg);
-                filter: saturate(0) brightness(0.5);
-                -webkit-mask-image: linear-gradient(To right, var(--bg-white) 80%, transparent 100%);
-                mask-image: linear-gradient(To right, var(--bg-white) 80%, transparent 100%);
-            }
-
-            &:nth-child(2) { 
-                width: 200px;
-                position: absolute;
-                top: 270px; 
-                left: -50px;
-                transform: rotate(-10deg);
-                filter: saturate(0) brightness(0.5);
-                -webkit-mask-image: linear-gradient(To right, var(--bg-white) 80%, transparent 100%);
-                mask-image: linear-gradient(To right, var(--bg-white) 80%, transparent 100%);
-            }
-
-            &:nth-child(3) { border: 2px solid var(--border-white); }
-
-            &:nth-child(4) { 
-                width: 230px;
-                position: absolute; 
-                right: -30px;
-                transform: rotate(10deg);
-                filter: saturate(0) brightness(0.5);
-                -webkit-mask-image: linear-gradient(To left, var(--bg-white) 80%, transparent 100%);
-                mask-image: linear-gradient(To left, var(--bg-white) 80%, transparent 100%);
-            }
-
-            &:nth-child(5) { 
-                width: 200px;
-                position: absolute;
-                top: 270px; 
-                right: -50px;
-                transform: rotate(10deg);
-                filter: saturate(0) brightness(0.5);
-                -webkit-mask-image: linear-gradient(To left, var(--bg-white) 80%, transparent 100%);
-                mask-image: linear-gradient(To left, var(--bg-white) 80%, transparent 100%);
-            }
-        }
+    .Me {
+        width: 450px;
+        -webkit-mask-image: linear-gradient(To bottom, var(--bg-white) 80%, transparent 100%);
+        mask-image: linear-gradient(To bottom, var(--bg-white) 80%, transparent 100%);
     }
 
-    h1 {
+    .title {
+        margin-top: -150px;
         text-align: center;
-        font-size: clamp(50px, 5vw, 80px);
+        font-size: clamp(40px, 10vw, 120px);
         color: var(--font-black);
-        font-weight: 600;
-        font-family: "Chakra Petch", serif;
+        font-weight: 900;
+        z-index: 10;
+        white-space: nowrap;
+
+        & span { 
+            font-size: inherit;
+            font-weight: inherit; 
+            color: inherit;
+        }
     }
 
     p {
         text-align: center;
         font-size: clamp(18px, 5vw, 20px);
         color: var(--font-sm-black);
-        line-height: 26px;
+        line-height: 1.5;
         max-width: 80ch;
-        font-family: "Chakra Petch", serif;
-    }
-
-    .float-left-bottom {
-        position: absolute;
-        bottom: 20px;
-        left: 20px;
-        display: flex;
-        align-self: center;
-        gap: 5px;
-
-        & svg {
-            border-radius: var(--radius-card);
-            background-color: var(--font-black);
-            width: 30px;
-            height: 30px;
-            padding: 5px;
-            stroke-width: 2px;
-        }
-
-        & h4 {
-            padding: 0 20px;
-            height: 30px;
-            display: grid;
-            place-content: center;
-            color: var(--bg-white);
-            background-color: var(--font-black);
-            font-weight: 600;
-            border-radius: var(--radius-card);
-        }
-    }
-
-    & .float-right-bottom {
-        position: absolute;
-        bottom: 20px;
-        right: 20px;
-        display: grid;
-        gap: 10px;
-
-        & .row {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-
-            & a {
-                background-color: var(--border-sm-white);
-                border-radius: var(--radius-card);
-                width: 35px;
-                height: 10px;
-                position: relative;
-                cursor: pointer;
-
-                &:hover {
-                    & span {
-                        scale: 1;
-                    }
-                }
-
-                & span {
-                    position: absolute;
-                    top: -40px;
-                    right: 0;
-                    font-size: 15px;
-                    color: var(--font-black);
-                    padding: 5px 15px;
-                    background-color: var(--bg-white);
-                    border: 1px solid var(--border-white);
-                    border-radius: var(--radius-card);
-                    white-space: nowrap;
-                    scale: 0;
-                    transition: 150ms;
-                    font-weight: 500;
-                }
-                
-                &:nth-child(1) {
-                    position: relative;
-                    background-color: var(--bg-purple);
-                }
-            }
-        }
+        font-weight: 500;
     }
 }
 
@@ -215,24 +114,62 @@ header {
     max-width: 1200px;
     margin: 0 auto;
     padding-bottom: 15px;
-    gap: 10px;
     display: grid;
+    place-items: center;
+    margin-top: 50px;
     position: relative;
 
-    & .title {
+    h3 {
+        position: absolute;
+        top: -50px;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 20px;
+        padding-bottom: 5px;
+        color: #3d3d40;
+        font-weight: 600;
+        text-transform: uppercase;
+        white-space: nowrap;
+
+        &::before {
+            position: absolute;
+            content: '';
+            bottom: -5px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 500%;
+            height: 1px;
+            border-bottom: 1px dashed var(--border-mm-white);
+        }
+
+        &::after {
+            position: absolute;
+            content: '';
+            top: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 500%;
+            height: 1px;
+            border-bottom: 1px dashed var(--border-mm-white);
+        }
+    }
+
+    .title {
+        text-align: center;
         font-size: clamp(30px, 5vw, 40px);
         color: var(--font-black);
         text-align: left;
+        max-width: 30ch;
         font-weight: 900;
     }
 
-    & .subTitle {
-        font-size: clamp(25px, 5vw, 30px);
-        text-align: left;
+    .subTitle {
+        text-align: center;
+        max-width: 70ch;
+        font-size: 18px;
         color: var(--font-sm-black);
-        max-width: 50ch;
-        line-height: 1.3;
-        font-weight: 900;
+        font-weight: 500;
+        line-height: 1.6;
     }
 }
 
@@ -240,6 +177,10 @@ header {
     max-width: 1200px;
     padding: 50px 0;
     margin: 0 auto;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
 }
 
 .contact {
